--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,8 @@
 task:
   matrix:
+    - name: FreeBSD 14.0
+      freebsd_instance:
+        image_family: freebsd-14-0
     - name: FreeBSD 13.2
       freebsd_instance:
         image_family: freebsd-13-2
